--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
           <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png">
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
-
+        <span>COLUMBIARECORDS.COM</span>
         <!-- span text 'COLUMBIARECORDS.COM' -->
 
-
+        <img src="https://s3.amazonaws.com/learn-verified/sony-logo.png">
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
 
       </div>
